app/assets/stylesheets/home.css.scss
// Place all the styles related to the Home controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.row.secondary-content{
  display: inline-block;
  .col-md-8{
    height: 90vh;
  }
}

.secondary-side-content{
  height: 100%;    
}
#stats-div{
  text-align: left;
  width: 100% !important;
}
.secondary-main-content{
  //height: 100%;    
}
.project-description{
  text-align: center;
}
/* Carousel base class */
.carousel {
  height: 90vh;
  margin-bottom: 50px;
  display:block;
}
.carousel-slide-text{
text-align: left !important;  
color: black;
}
/* Since positioning the image, we need to help out the caption */
.carousel-caption {
  z-index: 10;
  background-color: #F2F2F2;
  opacity:0.6;
  width: 40%;
  margin: 0 auto;
  text-align: left;
  padding: 10px;
}
.carousel-img{
  height:90vh !important;  
}
/* Declare heights because of positioning of img element */
.carousel .item {
  height: 90vh;
  background-color: #777;
}
.carousel-inner > .item > img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 90vh;
}
.carousel-divider{
  margin-top: 0px !important;
  margin-bottom: 40px !important;
}
/* Featurettes
------------------------- */

.featurette-divider {
  clear: both;
  margin-top: 40px;
  margin-bottom: 20px;
  /* Space out the Bootstrap <hr> more */
}

/* Thin out the marketing headings */
.featurette-heading {
  font-weight: 300;
  line-height: 1;
  letter-spacing: -1px;
}

/* RESPONSIVE CSS
-------------------------------------------------- */

@media (min-width: 768px) {

  .carousel-caption p {
    margin-bottom: 20px;
    font-size: 21px;
    line-height: 1.4;
    color: black;
  }

  .featurette-heading {
    font-size: 50px;
  }
}

@media (min-width: 992px) {
  .featurette-heading {
    margin-top: 120px;
  }
}
  
// .row.featurette{
//   img.col-md-5{
//     background-color: black;  
//     display: inline-block;
//     vertical-align: middle;
//     float: none;
//     height:500%;
// 
//     
//   }    
//}
.slogan{
  text-align: center;  
}
#news-feed{
  height: 70%;
  overflow-y: hidden;
  width: 100%;
//   hr{
//     color: black;  
//   }
  div{
    width:100%;
    border-radius: 6px;
    //background-color: white !important;
    
  }    
}

#stats-row{
  .item{
    background-color: white !important;
  }
  border-radius: 6px;
  height:25%;
  vertical-align:bottom;
  .featurette-divider{
    color: black;  
  }
  .homepage-text{
    text-align: center;
    p{
      text-align: center;
    }
  }
  div{
    //width: 90% ;
    //background-color: white !important;  
    -moz-box-shadow: 0 0px 0px 0px #9E9E9E !important;
    -webkit-box-shadow: 0 0px 0px 0px #9E9E9E !important;
    box-shadow: 0 0px 0px 0px #9E9E9E !important;  
    
  }
  .col-xs-4{
    text-align: center !important;
  }
}
.container.marketing{
  text-align: center;
  .col-md-4{
    p{
      text-align:left;  
    }  
  }
}
.featurette-image{
  width: 100%; 
}
.featurette{
  .col-lg-8{
    height:100%;  
    img{
    height: 90vh;
    }
  }
}
.featured-header.text-muted{
  text-align: center;
  vertical-align: top;
}
.img-rounded{
  -moz-box-shadow: 0 2px 3px 1px #9E9E9E;
  -webkit-box-shadow: 0 2px 3px 1px #9E9E9E;
  box-shadow: 0 2px 3px 1px #9E9E9E;  
}
#news-feed{
  max-height: 500px;
  text-align: left;
  .item{
    //height: 100% !important;  
  }
  
}
.second-footer{
  //width: 95%;
  //text-align: center;
  margin-top: 0px !important;
}
.home-controller.index-action{
  div.container.mainContent {
    width:100% !important ; 
  }
}
.collaborate-img{
  height:140px;  
}
.first-column{
  clear:both;  
}
.invisible{
  visibility: hidden;  
}
.three-col{
  clear: both;  
  width:100% !important;
  .collaborate-img{
    width: 310px !important;
  }
}
.isense-desc{
  height:80vh;  
  .welcome-two{
    margin-bottom: 20px !important;
  }
  .featurette-text{
    font-size: 1.2em !important;
  }
}
.ternary-upper{
  margin-top: 40px !important;
  margin-bottom: 20px !important;
}
.ternary-content{
  display:block;
  //height: 70vh;
  .news-prev-wrapper{
  text-align: left !important;
  //background-color: red;
  height: 100%;
  overflow-y: auto;
  //background-color: white !important;
  padding: 0px;
}
}
/* GLOBAL STYLES
-------------------------------------------------- */
/* Padding below the footer and lighter body text */

body {
  padding-bottom: 40px;
  color: #5a5a5a;
}
.homepage-text{
  padding: 5px;
  background-color: #F2F2F2 !important;
  text-align: left;
  margin-bottom: 10px;
}
.slide-header{
  font-size: 1.5em;
  font-weight: bolder;
}
#apps-get-involved{
  margin-top: 30px;
}  
.para-indent{
  font-size:1.25em;
  //font-weight: bold;
}
#column-two{

  div{
  text-align:left !important;
  
  }
  .app-desc{
    margin-bottom: 20px !important;
  }
  .homepage-text{
  
  //background-color: #F2F2F2 !important; 
  }
}
#column-one{
  .item-desc{
    //background-color: white !important;
    height: 170px !important;
  }
  
  a.item-image-link{
    height: 170px !important;
    width: 170px !important;
  }
  
  .col-md-12{
    height: 170px;
    margin-bottom: 5px;
    margin-left: 0px;
    margin-right: 0px;
    padding: 0px;
    
    .wide-item{
      background-color: #F2F2F2;
      text-align: center;
      box-shadow: 2px 3px 1px white;
      text-align: left !important;
      min-height: 170px !important;
      max-height: 170px !important;
    }  
  }
  .article_page_content.truncate{
    height: 100px !important;
    word-wrap: break-word;
    text-align: left !important;
  }
  .article_page_date{
    margin-bottom: 0px;
  }
  .article_page_link{
    background: linear-gradient(to bottom, rgba(242,242,242,0) 0%,rgba(242,242,242,0) 10%,rgba(242,242,242,0) 20%,rgba(242,242,242,.5) 30%,rgba(242,242,242,0.75) 40%,rgba(242,242,242,1) 50%,rgba(242,242,242,1) 60%,rgba(242,242,242,1) 70%,rgba(242,242,242,1) 80%,rgba(242,242,242,1) 90%,rgba(242,242,242,1) 100%);
  }
  .featurette-divider{
  //margin-top: 20px !important;
  //margin-bottom: 20px !important;
  }
}
#outer{
  padding-bottom: 10px !important;
}
.ternary-content{
  height:70vh;
  //overflow: hidden;
  #play-store-button{
    height: 90px !important;
    width: 90px !important;
  }
  #app-store-button{
    height: 90px !important;
    width: 90px !important;
  }
}
.homepage-header{
  color:#3366CC;
  font-size:2.5em;
  text-align: center;margin: 0 auto;
}

